--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
 body {
   background-color: #e0e0e0;
+  font-size: 35px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  padding: 3rem 0 0;
+  margin: 0;
+  color: #2196f3;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 
 .grid-menu {
@@ -21,11 +35,4 @@ body {
 
 .choice:hover {
   background: #1976d2;
-}
-
-a {
-  font-size: 35px;
-  text-decoration: none;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
 }
